contact file update

--- a/about.html
+++ b/about.html
@@ -27,12 +27,12 @@
       </div>
       <nav class="navbar-collapse collapse" id="bs-navbar" aria-expanded="false" style="height: 0.909091px;">
         <ul class="nav navbar-nav">
-          <li> <a href="../"><span class="glyphicon glyphicon-home"></span> Home</a> </li>
+          <li> <a href="index.html" ><span class="glyphicon glyphicon-home"></span> Home</a> </li>
           <li>
-            <a href="../"> <span class="glyphicon glyphicon-info-sign"></span> About</a>
+            <a href="../" class="active"> <span class="glyphicon glyphicon-info-sign"></span> About</a>
           </li>
           <li> <a href="../"><span class="glyphicon glyphicon-chevron-down"></span> Menu</a> </li>
-          <li> <a href="../"><span class="glyphicon glyphicon-phone-alt"></span> Contact</a> </li>
+          <li> <a href="contact.html"><span class="glyphicon glyphicon-phone-alt"></span> Contact</a> </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a data-toggle="modal" data-target="#loginModal"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
@@ -111,7 +111,6 @@
       <div class="row row-common">
          <div class="col-sm-12" id="corporate">
             <h2>Corporate Leadership</h2>
-
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h3 class="panel-title">Peter Pan</h3>
@@ -183,8 +182,8 @@
       </div>
     </div> <!--/col-sm-10-->
     <div class="col-sm-2">
-      <div data-spy="affix" id="navbar-scrollspy">
-        <ul class="nav nav-pills nav-stacked">
+      <div id="navbar-scrollspy">
+        <ul class="nav nav-pills nav-stacked" data-spy="affix">
           <li><a href="#history">Our History</a></li>
           <li><a href="#corporate">Corporate</a></li>
           <li><a href="#facts">Facts</a></li>
@@ -236,7 +235,7 @@
           <li><a href="" class="btn btn-social-icon btn-twitter"><i class="fa fa-twitter"></i></a></li>
           </li>
           <li><a href="" class="btn btn-social-icon btn-youtube"><i class="fa fa-youtube"></i></a></li>
-          <li><a href=""><i class="fa fa-envelope"></i></a></li>
+         <li><a href="" class="btn btn-social-icon btn-envelope"><i class="fa fa-envelope"></i></a></li>
         </ul>
       </div>
       <div class="col-sm-12 text-center">
