--- a/contact.html
+++ b/contact.html
@@ -27,12 +27,12 @@
       </div>
       <nav class="navbar-collapse collapse" id="bs-navbar" aria-expanded="false" style="height: 0.909091px;">
         <ul class="nav navbar-nav">
-          <li> <a href="../"><span class="glyphicon glyphicon-home"></span> Home</a> </li>
+          <li> <a href="index.html"><span class="glyphicon glyphicon-home"></span> Home</a> </li>
           <li>
-            <a href="../"> <span class="glyphicon glyphicon-info-sign"></span> About</a>
+            <a href="about.html"> <span class="glyphicon glyphicon-info-sign"></span> About</a>
           </li>
           <li> <a href="../"><span class="glyphicon glyphicon-chevron-down"></span> Menu</a> </li>
-          <li> <a href="../"><span class="glyphicon glyphicon-phone-alt"></span> Contact</a> </li>
+          <li> <a href="../" class="active"><span class="glyphicon glyphicon-phone-alt"></span> Contact</a> </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a data-toggle="modal" data-target="#loginModal"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
@@ -40,19 +40,19 @@
       </nav>
     </div>
   </div>
-<div class="jumbotron section-margin">
-  <div class="container">
-    <div class="row section-margin">
-      <div class="col-sm-8">
-        <h1>Ristorante con Fusion</h1>
-         <p class="section-margin padding-top">We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
-      </div>
-      <div class="col-sm-2 section-margin">
-        <img src="img/logo.png" alt="Ristorant Confusion">
+  <div class="jumbotron section-margin">
+    <div class="container">
+      <div class="row section-margin">
+        <div class="col-sm-8">
+          <h1>Ristorante con Fusion</h1>
+          <p class="section-margin padding-top">We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
+        </div>
+        <div class="col-sm-2 section-margin">
+          <img src="img/logo.png" alt="Ristorant Confusion">
+        </div>
       </div>
     </div>
-  </div>
-</div> <!-- /jumbotron -->
+  </div> <!-- /jumbotron -->
 </header>
 <div class="container">
   <div class="row">
@@ -63,7 +63,7 @@
             <li><a href="">Home</a></li>
             <li class="active">Contact Us</li>
           </ul>
-        </div>
+        </div> <!-- /col-sm-12 -->
         <div class="col-sm-12">
           <h3>Contact Us</h3>
         </div> <!-- /col-sm-12 -->
@@ -86,11 +86,11 @@
         <div class="col-sm-6">
           <h5>Map of our Location</h5>
         </div><!-- /col-sm-6 -->
-      </div>
+      </div> <!-- /row -->
       <div class="row row-common">
         <div class="col-sm-12">
           <h3>Send us your Feedback</h3>
-        </div>
+        </div> <!-- /col-sm-12-->
         <div class="col-sm-12">
           <form class="form-horizontal">
             <div class="form-group">
@@ -120,8 +120,9 @@
               </div>
             </div>
           </form>
-        </div>
-      </div>
+        </div><!-- /col-sm-12-->
+      </div> <!-- /row -->
+    </div> <!-- /row -->
 
 </div> <!-- /container -->
 <footer class="footer-section">
@@ -166,7 +167,7 @@
           <li><a href="" class="btn btn-social-icon btn-twitter"><i class="fa fa-twitter"></i></a></li>
           </li>
           <li><a href="" class="btn btn-social-icon btn-youtube"><i class="fa fa-youtube"></i></a></li>
-          <li><a href=""><i class="fa fa-envelope"></i></a></li>
+          <li><a href="" class="btn btn-social-icon btn-envelope"><i class="fa fa-envelope"></i></a></li>
         </ul>
       </div>
       <div class="col-sm-12 text-center">
